# aiorequestful

./: .flake8  .gitignore  Makefile  README.md  README.template.md  make.bat  pyproject.toml  readme.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml  docs_build.yml  docs_publish.yml  validate.yml
aioapiclient/: authorise.py
aioapiclient/cache/backend/: __init__.py
aiorequestful/: _utils.py  request.py  timer.py  types.py
aiorequestful/auth/: __init__.py  _base.py  _utils.py  basic.py  oauth2.py  utils.py
aiorequestful/cache/: session.py
aiorequestful/cache/backend/: base.py  sqlite.py
aiorequestful/request/: handler.py  timer.py
aiorequestful/response/: exception.py  payload.py  status.py
aiorequests/: __init__.py  _utils.py  authorise.py  exception.py  request.py  types.py
aiorequests/cache/: session.py
aiorequests/cache/backend/: __init__.py  base.py  sqlite.py
aiorestapi/: __init__.py  authorise.py  exception.py  request.py
aiorestapi/cache/: session.py
aiorestapi/cache/backend/: __init__.py  base.py  sqlite.py
docs/: conf.py  contributing.rst  index.rst  release-history.rst
docs/_templates/: module.rst_t  package.rst_t
docs/guides/: auth.rst  cache.rst  install.rst  request.rst  response.payload.rst  response.rst  response.status.rst  test.md  timer.rst
docs/guides/scripts/: timer.py
docs/guides/scripts/auth/: basic.py  core.py  oauth2.py  utils.py
docs/guides/scripts/cache/: response.py  session.py
docs/guides/scripts/cache/backend/: base.py  settings.py  (+1 more)
docs/guides/scripts/request/: _base.py  auth.py  cache.py  payload.py  simple.py  status.py  timer.py
docs/guides/scripts/response/: payload.py  payload_core.py
docs/guides/scripts/timer/: core.py  timer.py
docs/info/: contributing.rst  release-history.rst
docs/reference/: aiorequestful.auth.base.rst  aiorequestful.auth.basic.rst  aiorequestful.auth.exception.rst  aiorequestful.auth.oauth2.rst  aiorequestful.auth.rst  aiorequestful.auth.utils.rst  aiorequestful.cache.backend.base.rst  aiorequestful.cache.backend.rst  aiorequestful.cache.exception.rst  aiorequestful.cache.response.rst  aiorequestful.cache.rst  aiorequestful.cache.session.rst  aiorequestful.exception.rst  aiorequestful.request.exception.rst  aiorequestful.request.handler.rst  aiorequestful.request.rst  aiorequestful.request.timer.rst  aiorequestful.response.exception.rst  aiorequestful.response.payload.rst  aiorequestful.response.rst  aiorequestful.response.status.rst  aiorequestful.timer.rst  aiorequestful.types.rst
tests/: conftest.py  test_authorise.py  test_docs.py  test_request.py  test_timer.py  test_utils.py  utils.py
tests/__resources/: test_logging.yml
tests/auth/: test_base.py  test_basic.py  test_oauth2.py  test_utils.py  utils.py
tests/cache/: test_response.py  test_session.py
tests/cache/backend/: test_sqlite.py  testers.py  utils.py
tests/request/: test_handler.py  test_timer.py
tests/response/: test_payload.py  test_status.py
